add several files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "kfin"
-version = "0.1.0"
+version = "0.0.1"
 description = ""
 authors = ["hyunuck <gusdnr@gmail.com>"]
-license = "BSD License"
+license = "MIT License"
 readme = "README.md"
 
 [tool.poetry.dependencies]
